fix(#1175): OpenAPI connector enhancements for simulator random message generation