@@ -16,17 +16,6 @@
 
 package org.citrusframework.openapi.model.v3;
 
-import java.net.MalformedURLException;
-import java.net.URL;
-import java.util.ArrayList;
-import java.util.Arrays;
-import java.util.Collections;
-import java.util.List;
-import java.util.Map;
-import java.util.Objects;
-import java.util.Optional;
-import java.util.stream.Collectors;
-
 import io.apicurio.datamodels.core.models.common.Server;
 import io.apicurio.datamodels.core.models.common.ServerVariable;
 import io.apicurio.datamodels.openapi.models.OasResponse;
@@ -34,16 +23,31 @@ import io.apicurio.datamodels.openapi.models.OasSchema;
 import io.apicurio.datamodels.openapi.v3.models.Oas30Document;
 import io.apicurio.datamodels.openapi.v3.models.Oas30MediaType;
 import io.apicurio.datamodels.openapi.v3.models.Oas30Operation;
+import io.apicurio.datamodels.openapi.v3.models.Oas30Parameter;
 import io.apicurio.datamodels.openapi.v3.models.Oas30RequestBody;
 import io.apicurio.datamodels.openapi.v3.models.Oas30Response;
+import jakarta.annotation.Nullable;
+import java.net.MalformedURLException;
+import java.net.URL;
+import java.util.Arrays;
+import java.util.Collection;
+import java.util.Collections;
+import java.util.List;
+import java.util.Map;
+import java.util.Map.Entry;
+import java.util.Objects;
+import java.util.Optional;
+import java.util.stream.Collectors;
 import org.citrusframework.openapi.model.OasModelHelper;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
+import org.springframework.http.MediaType;
 
 public final class Oas30ModelHelper {
 
     /** Logger */
     private static final Logger LOG = LoggerFactory.getLogger(Oas30ModelHelper.class);
+    public static final String NO_URL_ERROR_MESSAGE = "Unable to determine base path from server URL: %s";
 
     private Oas30ModelHelper() {
         // utility class
@@ -59,7 +63,7 @@ public final class Oas30ModelHelper {
             try {
                 return new URL(serverUrl).getHost();
             } catch (MalformedURLException e) {
-                throw new IllegalStateException(String.format("Unable to determine base path from server URL: %s", serverUrl));
+                throw new IllegalStateException(String.format(NO_URL_ERROR_MESSAGE, serverUrl));
             }
         }
 
@@ -77,12 +81,12 @@ public final class Oas30ModelHelper {
                     try {
                         return new URL(serverUrl).getProtocol();
                     } catch (MalformedURLException e) {
-                        LOG.warn(String.format("Unable to determine base path from server URL: %s", serverUrl));
+                        LOG.warn(String.format(NO_URL_ERROR_MESSAGE, serverUrl));
                         return null;
                     }
                 })
         .filter(Objects::nonNull)
-        .collect(Collectors.toList());
+        .toList();
     }
 
     public static String getBasePath(Oas30Document openApiDoc) {
@@ -98,7 +102,7 @@ public final class Oas30ModelHelper {
             try {
                 basePath = new URL(serverUrl).getPath();
             } catch (MalformedURLException e) {
-                throw new IllegalStateException(String.format("Unable to determine base path from server URL: %s", serverUrl));
+                throw new IllegalStateException(String.format(NO_URL_ERROR_MESSAGE, serverUrl));
             }
         } else {
             basePath = serverUrl;
@@ -114,7 +118,7 @@ public final class Oas30ModelHelper {
 
         return openApiDoc.components.schemas.entrySet()
                 .stream()
-                .collect(Collectors.toMap(Map.Entry::getKey, entry -> (OasSchema) entry.getValue()));
+                .collect(Collectors.toMap(Map.Entry::getKey, Entry::getValue));
     }
 
     public static Optional<OasSchema> getSchema(Oas30Response response) {
@@ -169,44 +173,69 @@ public final class Oas30ModelHelper {
                 .findFirst();
     }
 
-    public static Optional<String> getResponseContentType(Oas30Document openApiDoc, Oas30Operation operation) {
+    public static Collection<String> getResponseTypes(@Nullable  Oas30Operation operation, Oas30Response response) {
+        if (operation == null) {
+            return Collections.emptySet();
+        }
+        return response.content != null ? response.content.keySet() : Collections.emptyList();
+    }
+
+    /**
+     * Returns the response content for random response generation. Note that this implementation currently only returns {@link MediaType#APPLICATION_JSON_VALUE},
+     * if this type exists. Otherwise, it will return an empty Optional. The reason for this is, that we cannot safely guess the type other than for JSON.
+     *
+     * @param openApiDoc
+     * @param operation
+     * @return
+     */
+    public static Optional<String> getResponseContentTypeForRandomGeneration(Oas30Document openApiDoc, Oas30Operation operation) {
+        Optional<OasResponse> responseForRandomGeneration = getResponseForRandomGeneration(
+            openApiDoc, operation);
+        return responseForRandomGeneration.map(
+                Oas30Response.class::cast).flatMap(res -> res.content.entrySet()
+                .stream()
+            .filter(entry -> MediaType.APPLICATION_JSON_VALUE.equals(entry.getKey()))
+                .filter(entry -> entry.getValue().schema != null)
+                .map(Map.Entry::getKey)
+                .findFirst());
+    }
+
+    public static Optional<OasResponse> getResponseForRandomGeneration(Oas30Document openApiDoc, Oas30Operation operation) {
         if (operation.responses == null) {
             return Optional.empty();
         }
 
-        List<OasResponse> responses = new ArrayList<>();
-
-        for (OasResponse response : operation.responses.getResponses()) {
-            if (response.$ref != null) {
-                responses.add(openApiDoc.components.responses.get(OasModelHelper.getReferenceName(response.$ref)));
-            } else {
-                responses.add(response);
-            }
-        }
+        List<OasResponse> responses = OasModelHelper.resolveResponses(operation.responses,
+            responseRef -> openApiDoc.components.responses.get(OasModelHelper.getReferenceName(responseRef)));
 
         // Pick the response object related to the first 2xx return code found
-        Optional<Oas30Response> response = responses.stream()
-                .filter(Oas30Response.class::isInstance)
-                .filter(r -> r.getStatusCode() != null && r.getStatusCode().startsWith("2"))
-                .map(Oas30Response.class::cast)
-                .filter(res -> Oas30ModelHelper.getSchema(res).isPresent())
-                .findFirst();
+        Optional<OasResponse> response = responses.stream()
+            .filter(Oas30Response.class::isInstance)
+            .filter(r -> r.getStatusCode() != null && r.getStatusCode().startsWith("2"))
+            .map(OasResponse.class::cast)
+            .filter(res -> OasModelHelper.getSchema(res).isPresent())
+            .findFirst();
 
         // No 2xx response given so pick the first one no matter what status code
-        if (!response.isPresent()) {
+        if (response.isEmpty()) {
+            // TODO: This behavior differs from OAS2 and is very likely a bug because it may result in returning error messages.
+            // According to the specification, there MUST be at least one response, which SHOULD be a successful response.
+            // If the response is NOT A SUCCESSFUL one, we encounter an error case, which is likely not the intended behavior.
+            // The specification likely does not intend to define operations that always fail. On the other hand, it is not
+            // against the spec to NOT document an OK response that is empty.
+            // For testing purposes, note that the difference between OAS2 and OAS3 is evident in the Petstore API.
+            // The Petstore API specifies successful response codes for OAS3 but lacks these definitions for OAS2.
+            // Therefore, while tests pass for OAS3, they fail for OAS2.
+            // I would suggest to return an empty response in case we fail to resolve a good response, as in Oas2.
+            // In case of absence of a response an OK response will be sent as default.
             response = responses.stream()
-                    .filter(Oas30Response.class::isInstance)
-                    .map(Oas30Response.class::cast)
-                    .filter(res -> Oas30ModelHelper.getSchema(res).isPresent())
-                    .findFirst();
+                .filter(Oas30Response.class::isInstance)
+                .map(OasResponse.class::cast)
+                .filter(res -> OasModelHelper.getSchema(res).isPresent())
+                .findFirst();
         }
 
-        return response.flatMap(res -> res.content.entrySet()
-                .stream()
-                .filter(entry -> entry.getValue().schema != null)
-                .map(Map.Entry::getKey)
-                .findFirst());
-
+        return response;
     }
 
     public static Map<String, OasSchema> getRequiredHeaders(Oas30Response response) {
@@ -250,5 +279,9 @@ public final class Oas30ModelHelper {
         }
 
         return url;
+    }
+
+    public static Optional<OasSchema> getParameterSchema(Oas30Parameter parameter) {
+        return Optional.ofNullable((OasSchema) parameter.schema);
     }
 }
